# chronoface

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  __main__.py  app.py
backend/api/: __init__.py  routes_collage.py  routes_faces.py  routes_scan.py  sse.py
backend/core/: bucket.py  cache.py  cluster.py  collage.py  config.py  detector.py  embedder.py  exifutil.py  imageio.py  logging.py  models.py  pipeline.py  types.py
backend/models/: THIRD_PARTY_NOTICES.md
backend/scripts/: bench_run.py  fetch_models.py
backend/tests/: test_bucket.py  test_cluster.py  test_collage.py  test_exif.py
chronoface.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BucketSelector.tsx  ClusterPanel.tsx  DetectionGrid.tsx  FaceThumb.tsx  FolderPicker.tsx  ProgressBar.tsx  Toasts.tsx  Toolbar.tsx  WizardSteps.tsx
frontend/src/routes/: About.tsx  Arrange.tsx  Collage.tsx  Configure.tsx  Home.tsx  Review.tsx  Scan.tsx
frontend/src/state/: useRunStore.ts
frontend/src/styles/: globals.css
frontend/src/tests/: BucketSelector.test.tsx  DetectionGrid.test.tsx  RunStore.test.ts  setup.ts
scripts/: dev.sh
